[package]
name = "drone-frontend"
version = "0.1.0"
edition = "2024"
authors = ["EngineVector <tomas@enginevector.com>"]
license = "MIT"
description = "Tactical HUD frontend for drone convoy tracking system"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos framework
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7", features = ["csr"] }

# Charming for charts (ECharts wrapper)
charming = { version = "0.4", features = ["leptos"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# IDs
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

# Async
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.6"
gloo-storage = "0.3"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "DomRect",
    "CssStyleDeclaration",
    "console",
    "Performance",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "BinaryType",
] }

# Logging
log = "0.4"
console_log = { version = "1.0", features = ["color"] }
console_error_panic_hook = "0.1"

# Domain types (shared)
drone-domain = { path = "../drone-domain" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
