[package]
name = "drone-simulator"
version = "0.1.0"
edition = "2024"
authors = ["EngineVector <tomas@enginevector.com>"]
license = "MIT"
description = "Telemetry and engagement simulator for drone convoy testing"

[[bin]]
name = "drone-simulator"
path = "src/main.rs"

[dependencies]
# Domain types
drone-domain = { path = "../drone-domain" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Random generation
rand = "0.8"
rand_distr = "0.4"

# HTTP client for GraphQL
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
